# Project-LIFE-Agent

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  build-extension.sh  content-script-cross.js  create_remaining_files.sh  pyproject.toml
browser-extension/: background.js  content-script.js  manifest.json
browser-extension/config/: dark-patterns.json
browser-extension/lib/: advanced-pattern-detector.js  pattern-detector.js  tracker-analyzer-enhanced.js  tracker-analyzer.js
browser-extension/popup/: popup.css  popup.html  popup.js
config/: dark-patterns.yaml
core/: life_agent.py
dashboard/: index.html
docs/: ARCHITECTURE.md  ROADMAP.md  THEORY.md
intent-vault/: model_config.yaml
inversion-protocol/: company_database.json  dsar_orchestrator.py  regulatory_complaint.py  requirements.txt
inversion-protocol/templates/: ccpa_request.txt  dispute_letter.txt  gdpr_request.txt
ml-training/: prepare_dataset.py
mobile/: life_agent_vpn.dart
swarm-layer/: package.json  protocol.md  threat_intel.py
